--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <button class="tweet-btn">TWEET</button>
 
     <section>
+        <div class="video-preview">
         <p class="video-title">Talking Tech and AI with Google CEO sunder Pichai!</p>
         <p class="video-stats">3.4million views &#183; 6 months ago</p> 
         <p class="video-author">Marquees Brownlee &#10003;</p>
         <p class="video-discription">talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to sundar!</p>
 
         <p class="apple-text">Shop early for the best selection of holiday favourities. <span class="shop-link">shop now</span> &gt;</p>
+    </div>
 
     </section>
+
+    <a href="display-property.html">go to second page</a>
     
 </body>
 </html>
